--- a/app/src/main/res/layout/fragment_custom_map.xml
+++ b/app/src/main/res/layout/fragment_custom_map.xml
@@ -5,12 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".CustomMapFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/custom_map_fragment"
-        android:textSize="25sp"
-        android:layout_centerInParent="true"
-        />
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
