map ok avec waypoint debut liste itinéraire

--- a/app/src/main/res/layout/fragment_custom_map.xml
+++ b/app/src/main/res/layout/fragment_custom_map.xml
@@ -11,4 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/buttonSave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#359c5e"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:text="Save"
+        android:textColor="#ffffff" />
+
 </RelativeLayout>
