--- a/app/src/main/res/layout/fragment_accelerometer.xml
+++ b/app/src/main/res/layout/fragment_accelerometer.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment">
+    tools:context=".AccelerometerFragment">
 
 
     <fragment
-        android:id="@+id/acceleromterFragment"
+        android:id="@+id/accelerometerFragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
